# Software

./: requirements.txt
Makefiles/: Makefile.docker.mk
catkin_ws/src/00-infrastructure/duckietown/config/baseline/vehicle_detection/vehicle_avoidance_control_node/: default.yaml
catkin_ws/src/00-infrastructure/duckietown/launch/: kinematics_calibration.launch
catkin_ws/src/20-indefinite-navigation/indefinite_navigation/tests/: test_kinematics.py
catkin_ws/src/50-misc-additional-functionality/follow_leader/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/50-misc-additional-functionality/follow_leader/include/follow_leader/: follow_leader_controller.py  follow_leader_controller2.py  follow_leader_controller_alternative.py  follow_leader_controller_bad.py
catkin_ws/src/50-misc-additional-functionality/follow_leader/launch/: follow_leader_node.launch
catkin_ws/src/50-misc-additional-functionality/follow_leader/src/: follow_leader_node.py
catkin_ws/src/50-misc-additional-functionality/vehicle_detection/src/: .vehicle_avoidance_control_node.py.swp  vehicle_avoidance_control_node.py
catkin_ws/src/70-convenience-packages/duckietown_demos/launch/: demo_follow_leader.launch  master.launch
