<?xml version="1.0"?>
<package>
  <name>follow_leader</name>
  <version>1.0.0</version>
  <description>
The package `follow_leader` package that enable the following of a circle grid pattern.

For the tutorial, see [](#ros-python-howto).
</description>

  <author email="gibernas@ethz.ch">Gianmarco Bernasconi</author>
  <maintainer email="gibernas@ethz.ch">Gianmarco Bernasconi</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
